syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "akkaserverless/annotations.proto";

/**
* This is where we define our domain, in this case the events that will be stored.
**/
package wirelessmeshdomain;

message CustomerLocationAdded {
    string customerLocationId = 1;
    string accessToken = 2;
}

service PubSubPublisherService {
    rpc PublishCustomerLocationAdded(CustomerLocationAdded) returns (CustomerLocationAdded) {
        option (akkaserverless.method).eventing = {
            in: {
                event_log: "CustomerLocationEntity";
            }
            out: {
                topic: "wirelessmesh";
            }
        };
    }

    // handle other events which are not managed above
    rpc CatchOthers(google.protobuf.Any) returns (google.protobuf.Empty) {
        option (akkaserverless.method).eventing = {
            in: {
                event_log:  "CustomerLocationEntity"
            }
        };
    };
}

message CustomerLocationRemoved {
    string customerLocationId = 1;
}

message DeviceActivated {
    string deviceId = 1;
    string customerLocationId = 2;
}

message DeviceRemoved {
    string deviceId = 1;
    string customerLocationId = 2;
}

message RoomAssigned {
    string deviceId = 1;
    string customerLocationId = 2;
    string room = 3;
}

message NightlightToggled {
    string deviceId = 1;
    string customerLocationId = 2;
    bool nightlightOn = 3;
}
